neg-demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: neg-demo-app
  name: neg-demo-app
spec:
  selector:
    matchLabels:
      run: neg-demo-app
  template:
    metadata:
      labels:
        run: neg-demo-app
    spec:
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4
        name: hostname
