neg-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neg-demo-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "my-backend-config"}'
spec:
  type: NodePort
  selector:
    run: neg-demo-app
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9376
    name: neg-demo-port
